Converge Matching on shared Rule indexes and direct dispatch
Bind every Task to a fixed Matching Handler and consume bounded eligibility
queries directly in Kernel dispatch. Remove matching modes, persisted DSL,
per-Task candidate caches, match-demand queues and allocation producers.

Materialize Worker and Platform facts with shared indexes in bounded Lua.
Preserve Kernel HOT holds, post-hold membership rechecks, dirty/exact
confirmation and Item claims. Migrate Server APIs, products, frontend,
proof fixtures and current owner documentation in the same cutover.

Validation: Kernel, Pacer, Matching and Server tests; Redis Owner and Runtime
Boundary proofs; Worker Correctness, Dynamic Matching and Convergence Health;
product functional/lifecycle and archive proofs; frontend and doc contracts.